<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="net.gini.android.capture.screen.ui.ConfigurationActivity">


    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="@dimen/gc_large"
            android:paddingTop="8dp"
            android:paddingBottom="8dp">

            <TextView
                android:id="@+id/tv_relaunchForDefaultConfiguration"
                style="@style/TextAppearance.MaterialComponents.Body1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/relaunch_to_use_default_configuration"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.divider.MaterialDivider
                android:id="@+id/divider2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/gc_medium"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_relaunchForDefaultConfiguration" />


            <com.google.android.material.switchmaterial.SwitchMaterial
                style="@style/TextAppearance.MaterialComponents.Body1"
                android:id="@+id/switch_openWith"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/open_with_switch_label"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/divider2"

                 />


            <com.google.android.material.switchmaterial.SwitchMaterial
                style="@style/TextAppearance.MaterialComponents.Body1"
                android:id="@+id/switch_qrCodeScanning"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/qr_code_scanning_switch_label"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/switch_openWith"
                 />

            <com.google.android.material.switchmaterial.SwitchMaterial
                style="@style/TextAppearance.MaterialComponents.Body1"
                android:id="@+id/switch_onlyQRCodeScanning"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/only_qr_code_scanning_switch_label"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/switch_qrCodeScanning" />

            <TextView
                android:id="@+id/tv_onlyQrCodeDescription"
                style="@style/TextAppearance.MaterialComponents.Caption"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/only_qr_code_scanning_switch_description"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/switch_onlyQRCodeScanning" />

            <com.google.android.material.switchmaterial.SwitchMaterial
                style="@style/TextAppearance.MaterialComponents.Body1"
                android:id="@+id/switch_multiPage"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/gc_medium_12"
                android:text="@string/multi_page_switch_label"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_onlyQrCodeDescription" />

            <com.google.android.material.switchmaterial.SwitchMaterial
                style="@style/TextAppearance.MaterialComponents.Body1"
                android:id="@+id/switch_flashToggle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/flash_toggle_switch_label"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/switch_multiPage" />

            <com.google.android.material.switchmaterial.SwitchMaterial
                style="@style/TextAppearance.MaterialComponents.Body1"
                android:id="@+id/switch_flashOnByDefault"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/flash_on_by_default_switch_label"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/switch_flashToggle" />

            <TextView
                android:id="@+id/tv_flashOnByDefaultDescription"
                style="@style/TextAppearance.MaterialComponents.Caption"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/flash_on_by_default_switch_description"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/switch_flashOnByDefault" />

            <TextView
                android:id="@+id/tv_fileImportLabel"
                style="@style/TextAppearance.MaterialComponents.Body2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/gc_large"
                android:text="@string/file_import_segmented_button_label"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_flashOnByDefaultDescription" />

            <com.google.android.material.button.MaterialButtonToggleGroup
                android:id="@+id/toggleBtn_fileImportSetup"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_fileImportLabel"
                app:singleSelection="true">

                <Button
                    android:id="@+id/btn_fileImportDisabled"
                    style="?attr/materialButtonOutlinedStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/file_import_disabled_button_label" />

                <Button
                    android:id="@+id/btn_fileImportOnlyPdf"
                    style="?attr/materialButtonOutlinedStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/file_import_only_pdf_button_label" />

                <Button
                    android:id="@+id/btn_fileImportPdfAndImage"
                    style="?attr/materialButtonOutlinedStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/file_import_pdf_and_image_button_label" />
            </com.google.android.material.button.MaterialButtonToggleGroup>


            <com.google.android.material.switchmaterial.SwitchMaterial
                style="@style/TextAppearance.MaterialComponents.Body1"
                android:id="@+id/switch_showBottomNavbar"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/bottom_navbar_switch_label"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/toggleBtn_fileImportSetup" />

            <com.google.android.material.switchmaterial.SwitchMaterial
                style="@style/TextAppearance.MaterialComponents.Body1"
                android:id="@+id/switch_showHelpScreenCustomBottomNavbar"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/help_screens_bottom_navbar_switch_label"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/switch_showBottomNavbar" />

            <TextView
                android:id="@+id/tv_showHelpScreenCustomBottomNavbarDescription"
                style="@style/TextAppearance.MaterialComponents.Caption"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/custom_bottom_navbar_switch_description"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/switch_showHelpScreenCustomBottomNavbar" />

            <com.google.android.material.switchmaterial.SwitchMaterial
                style="@style/TextAppearance.MaterialComponents.Body1"
                android:id="@+id/switch_cameraScreenCustomBottomNavbar"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/gc_medium_12"
                android:text="@string/camera_screen_custom_bottom_navbar_switch_label"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_showHelpScreenCustomBottomNavbarDescription" />

            <TextView
                android:id="@+id/tv_cameraScreenCustomBottomNavbarDescription"
                style="@style/TextAppearance.MaterialComponents.Caption"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/custom_bottom_navbar_switch_description"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/switch_cameraScreenCustomBottomNavbar" />


            <com.google.android.material.switchmaterial.SwitchMaterial
                style="@style/TextAppearance.MaterialComponents.Body1"
                android:id="@+id/switch_reviewScreenCustomBottomNavbar"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/gc_medium_12"
                android:text="@string/review_screen_custom_bottom_navbar_switch_label"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_cameraScreenCustomBottomNavbarDescription" />

            <TextView
                android:id="@+id/tv_reviewScreenCustomBottomNavbarDescription"
                style="@style/TextAppearance.MaterialComponents.Caption"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/custom_bottom_navbar_switch_description"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/switch_reviewScreenCustomBottomNavbar" />


            <com.google.android.material.switchmaterial.SwitchMaterial
                style="@style/TextAppearance.MaterialComponents.Body1"
                android:id="@+id/switch_imagePickerScreenCustomBottomNavbar"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/gc_medium_12"
                android:text="@string/image_picker_custom_bottom_navbar_switch_label"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_reviewScreenCustomBottomNavbarDescription" />

            <TextView
                android:id="@+id/tv_imagePickerCustomBottomNavbarDescription"
                style="@style/TextAppearance.MaterialComponents.Caption"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/custom_bottom_navbar_switch_description"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/switch_imagePickerScreenCustomBottomNavbar" />



            <com.google.android.material.switchmaterial.SwitchMaterial
                style="@style/TextAppearance.MaterialComponents.Body1"
                android:id="@+id/switch_onboardingScreensAtFirstLaunch"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/gc_medium_12"
                android:text="@string/onboarding_screens_at_first_launch_switch_label"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_imagePickerCustomBottomNavbarDescription" />


            <com.google.android.material.switchmaterial.SwitchMaterial
                style="@style/TextAppearance.MaterialComponents.Body1"
                android:id="@+id/switch_onboardingScreensAtEveryLaunch"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/gc_medium_12"
                android:text="@string/onboarding_screens_at_every_launch_switch_label"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/switch_onboardingScreensAtFirstLaunch" />

            <TextView
                android:id="@+id/tv_onboardingScreensAtEveryLaunchDescription"
                style="@style/TextAppearance.MaterialComponents.Caption"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/onboarding_screens_at_every_launch_switch_description"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/switch_onboardingScreensAtEveryLaunch" />






        </androidx.constraintlayout.widget.ConstraintLayout>


    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>